# stator_gen

./: CMakeLists.txt  README.md  backplot.sh  body_profile.cpp  gen.sh  headphones.scad  jc_voronoi.h  nc_tools.conf  stator_gen.cpp
toolpaths/: backplot.sh  spacer.lua  stator_outside.lua
